--- a/app/axioms.tex
+++ b/app/axioms.tex
@@ -126,4 +126,21 @@ and
 	\pr{E_1|A} &= \frac{\pr{E_1}\pr{A|E_1}}{\sum_{i=1}^{2}\pr{E_i}\pr{A|E_i}}
 \label{eq:axiom-bayes}
 \end{align}
+\item Let $X, Y \in \cbrak{0,1}$ be two random variables.  Then, 
+\begin{align}
+	\label{eq:12/13/3/43/yixj-def}
+	  \pr{Y=1|X=0}\triangleq  p_{Y|X}\brak{1|0}
+\end{align}
+\item 
+\begin{align}
+	   p_{Y|X}\brak{1|0}
+	   &=
+	   \frac{p_{X,Y}\brak{0,1}}{p_{X}\brak{0}}
+	   =
+	   \frac{p_{X}\brak{0}-p_{X,Y}\brak{0,0}}{p_{X}\brak{0}}
+	   \\
+	   &=
+	   1-\frac{p_{X,Y}\brak{0,0}}{p_{X}\brak{0}} = 1-p_{Y|X}\brak{0|0}
+	\label{eq:12/13/3/43/yixj}
+\end{align}
 \end{enumerate}
