--- a/ncert/binomial.tex
+++ b/ncert/binomial.tex
@@ -1,4 +1,9 @@
 \begin{enumerate}[label=\thesubsection.\arabic*,ref=\thesubsection.\theenumi]
+\item A die is tossed thrice. Find the probability of getting an odd number at least once.
+%		\label{ncert/12/13/2/12}
+		\\
+	\solution
+%\input{ncert/12/13/2/12/binom.tex}
 \item A die is thrown twice. What is the probability that
 \begin{enumerate}
 	\item 5 will not come up either time? 
@@ -114,22 +119,17 @@ will fuse after 150 days of use.
 \solution
  \input{ncert/12/13/6/5/binom.tex}
 
+\item Find the probability distribution of
+\begin{enumerate}
+	\item number of heads in two tosses of a coin.
+	\item number of tails in the simultaneous tosses of three coins.
+	\item number of heads in four tosses of a coin.
+\end{enumerate}
+\solution
+%\input{ncert/12/13/4/4/dist.tex}
 \item An urn contains 5 red and 2 black balls. Two balls are randomly drawn. Let X
 represent the number of black balls. What are the possible values of X? Is X a
 random variable ? 
-\item Find the probability distribution of
-\begin{enumerate}
-\item number of heads in two tosses of a coin.
-\item number of tails in the simultaneous tosses of three coins.
-\item number of heads in four tosses of a coin.
-\end{enumerate}
-
-\item Find the probability distribution of the number of successes in two tosses of a die,
-where a success is defined as
-\begin{enumerate}
-\item number greater than 4
-\item six appears on at least one die
-\end{enumerate}
 \item From a lot of 30 bulbs which include 6 defectives, a sample of 4 bulbs is drawn
 at random with replacement. Find the probability distribution of the number of
 defective bulbs.
@@ -139,39 +139,39 @@ tossed twice, find the probability distribution of number of tails.
 \\
 \solution
  \input{ncert/11/16/3/2/binom.tex}
-\item From a lot of 30 bulbs which include 6 defectives, a sample of 4 bulbs is drawn
-at random with replacement. Find the probability distribution of the number of
-defective bulbs.
  \item Suppose $X$ is a binomial distribution $B\left(6,\frac{1}{2}\right)$. Show that $X=3$ is the most likely outcome.
 (Hint : $P(X=3)$ is the maximum among all $P(x_i),x_i=0,1,2,3,4,5,6$)
 \\ \solution 
  \input{ncert/12/13/5/8/main.tex}
-\item A fair coin is tossed four times, and a person win Re $1$ for each head and lose Rs $1.5$ for each tail that turns up.\\
+\item A fair coin is tossed four times, and a person win Re $1$ for each head and lose Rs $1.5$ for each tail that turns up.
 From the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.
 \\
 \solution
  \input{ncert/11/16/3/7a/main.tex}
 \item It is known that 10 $\%$ of certain articles manufactured are defective. What is the probability that in a random sample space of 12 such articles,9 are defective? \\
 \solution
-% \input{ncert/12/13/5/13/12.13.5.13/main.tex}
+ \input{ncert/12/13/5/13/main.tex}
 \item A coin is tossed two times. Find the probability of getting at most one head.
 \\
 \solution
-% \input{exemplar/10/13/3/24/ncertq2.tex}
+ \input{exemplar/10/13/3/24/ncertq2.tex}
 \item An experiment succeeds twice as often as it fails. Find the probability that in the next
 six trials, there will be atleast 4 successes.
+\\
 \solution
-% \input{ncert/12/13/6/9/main.tex}
+ \input{ncert/12/13/6/9/main.tex}
 \item A die is thrown 5 times. Find the probability that an odd number will come up exactly three times.
+	\\
 		\solution
-% \input{exemplar/12/13/3/20/main.tex}
+ \input{exemplar/12/13/3/20/main.tex}
 \item A coin is tossed 3 times. List the possible outcomes. Find the probability of getting
 (i) all heads (ii) at least 2 heads \\
 \solution
-% \input{exemplar/10/13/3/25/main.tex}
+ \input{exemplar/10/13/3/25/main.tex}
 \item Ten coins are tossed. What is the probability of getting atleast 8 heads?
 \\
-% \input{exemplar/12/13/3/21/main.tex}
+\solution
+ \input{exemplar/12/13/3/21/main.tex}
 \item A factory produces bulbs. The probability that any one bulb is defective is $\frac{1}{50}$ and they are packed in boxes of 10. From a single box, find the probability that
 \begin{enumerate}
 \item none of the bulb is defective 
@@ -179,11 +179,13 @@ six trials, there will be atleast 4 successes.
 \item more than 8 bulbs are working properly
 \end{enumerate}
 \solution
-% \input{exemplar/12/13/3/31/main.tex}
+ \input{exemplar/12/13/3/31/main.tex}
 \item A lot of 100 watches is known to have 10 defective watches. If 8 watches are
 selected (one by one with replacement) at random, what is the probability that
 there will be at least one defective watch?
-\\	\input{exemplar/12/13/3/23/main.tex}
+\\	
+\solution
+\input{exemplar/12/13/3/23/main.tex}
     \section{Miscellaneous}
 \begin{enumerate}[label=\thesection.\arabic*,ref=\thesection.\theenumi]
 \item  The random variable $X$ has a probability distribution \pr{X} of the following form, where $k$ is some number 
@@ -298,27 +300,6 @@ together is
 well shuffled ordinary deck of 52 cards.\\
 (d) The sum of 6 appears in a single toss of a pair of fair dice.
 % \input{exemplar/11/16/3/17/main.tex}
-\item A die is thrown twice. What is the probability that
-\begin{enumerate}[font=\large\bfseries]
-	\item 5 will not come up either time? 
-	\item 5 will come up at least once?
-\end{enumerate}
-\solution
-%\input{ncert/10/15/1/24/binom.tex}
-  \item Three coins are tossed once. Find the probability of getting 
-    \begin{enumerate}
-        \item 3 heads
-        \item 2 heads
-        \item atleast 2 heads 
-        \item atmost 2 heads
-        \item no head
-        \item 3 tails 
-        \item exactly two tails
-        \item no tail
-        \item atmost two tails
-    \end{enumerate}
-\solution
-%\input{ncert/11/16/3/8/binom.tex}
 \item In a game, the entry fee is Rs 5.The game consists of a tossing a coin 3 times.If one or two heads show, Sweta gets her entry fee back.If she throws 3 heads, she receives double the entry fees.Otherwise she will lose. For tossing a coin three times, find the probability that she 
 \begin{enumerate}
 	\item loses the entry fee.
@@ -329,174 +310,14 @@ well shuffled ordinary deck of 52 cards.\\
 \end{enumerate}
 \solution
 %\input{exemplar/10/13/3/38/binom.tex}
-	\item 
-	A game consists of tossing a one rupee coin 3 times and noting its outcome each time. Hanif wins if all the tosses give the same result i.e., three heads or three tails, and loses otherwise. Calculate the probability that Hanif will lose the game
-\\
-%\input{ncert/10/15/1/23/main.tex}
 %%\input{ncert/12/13/1/1/cond.tex}
-\item A coin is tossed three times, where. Determine \pr{E \mid F} where
-\begin{enumerate}
-\item $E$ : head on third toss, $F$ : heads on first two tosses
-\item $E$ : at least two heads, $F$ : at most two heads
-\item $E$ : at most two tails, $F$ : at least one tail
-\end{enumerate}
-\solution 
-%\input{ncert/12/13/1/6/cond.tex}
-\item A die is tossed thrice. Find the probability of getting an odd number at least once.
-%		\label{ncert/12/13/2/12}
-		\\
-	\solution
-%\input{ncert/12/13/2/12/binom.tex}
-\item Find the probability distribution of
-\begin{enumerate}
-	\item number of heads in two tosses of a coin.
-	\item number of tails in the simultaneous tosses of three coins.
-	\item number of heads in four tosses of a coin.
-\end{enumerate}
-\solution
-%\input{ncert/12/13/4/4/dist.tex}
-\item Find the probability distribution of the number of successes in two tosses of a die,
-where a success is defined as\\
-\begin{enumerate}
-\item number greater than 4
-\item six appears on at least one die
-\end{enumerate}
-\solution
-%\input{ncert/12/13/4/5/binom.tex}
-\item There are 5\% defective items in a large bulk of items. What is the probability that a sample of 10 items will include not more than one defective item?
-	\\
-\solution
-%\input{ncert/12/13/5/3/main.tex}
-\item Five cards are drawn successively with replacement from a well-shuffled deck
-of 52 cards. What is the probability that
-\begin{enumerate}
-    \item all the five cards are spades?
-    \item only 3 cards are spades?
-    \item none is a spade?
-\end{enumerate}
-\solution
-%\input{ncert/12/13/5/4/binom.tex}
-\item The probability that a bulb produced by a factory will fuse after 150 days of use
-is $0.05$. Find the probability that out of 5 such bulbs
-\begin{enumerate}
-\item  none
-\item not more than one
-\item more than one
-\item at least one
-\end{enumerate}
-will fuse after 150 days of use.
-\\
-\solution
-%\input{ncert/12/13/5/5/binom.tex}
-\item A bag consists of 10 balls each marked with one of the digits 0 to 9. If 4 balls are drawn successively with replacement from the bag, what is the probability that none is marked with the digit 0?
-\\
-\solution
-%\input{ncert/12/13/5/6/main.tex}
-\item How many times must a man toss a fair coin so that the probability of having at least one head is more than 90\%?
-\\
-%\input{ncert/12/13/6/10/binom.tex}
-\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
-\\
-\solution
-%\input{ncert/12/13/5/7/binom.tex}
-\item Find the probability of getting 5 twice in 7 throws of a dice.\\
-\\
-\solution
-%\input{ncert/12/13/5/11/binom.tex}
-\item On a multiple choice examination with three possible answers for each of the five questions, what is the probability that a candidate would get four or more correct answers just by guessing$?$
-\\
-\solution
-%\input{ncert/12/13/5/9/binom.tex}
-\item Find the probability of throwing at most 2 sixes in 6 throws of a single die.\\
-\solution
-%\input{ncert/12/13/5/12/binom.tex}
-\item Suppose that 90 \% of people are right-handed. What is the probability that atmost 6 of a random sample of 10 people are right-handed. 
-\\
-\solution
-%\input{ncert/12/13/6/4/main.tex}
-  \item An urn contains 25 balls of which 10 balls bear a mark `X' and the 
-    remaining 15 bear a mark `Y'. A ball is drawn at random from the urn, its 
-    mark is noted down and it is replaced. If 6 balls are drawn in this way, 
-    find the probability that 
-    \begin{enumerate}
-        \item all will bear `X' mark. 
-        \item not more than 2 will bear `Y' mark. 
-        \item at least one ball will bear `Y' mark. 
-        \item the number of balls with `X' mark and `Y' mark will be equal.
-    \end{enumerate}
-\solution
-%\input{ncert/12/13/6/5/binom.tex}
 
-\item An urn contains 5 red and 2 black balls. Two balls are randomly drawn. Let X
-represent the number of black balls. What are the possible values of X? Is X a
-random variable ? 
-\item Find the probability distribution of
-\begin{enumerate}
-\item number of heads in two tosses of a coin.
-\item number of tails in the simultaneous tosses of three coins.
-\item number of heads in four tosses of a coin.
-\end{enumerate}
-
-\item Find the probability distribution of the number of successes in two tosses of a die,
-where a success is defined as
-\begin{enumerate}
-\item number greater than 4
-\item six appears on at least one die
-\end{enumerate}
-\item From a lot of 30 bulbs which include 6 defectives, a sample of 4 bulbs is drawn
-at random with replacement. Find the probability distribution of the number of
-defective bulbs.
 \item A coin is biased so that the head is 3 times as likely to occur as tail. If the coin is
 tossed twice, find the probability distribution of number of tails.
 \item A coin is tossed twice, what is the probability that atleast one tail occurs?
 \\
 \solution
 %\input{ncert/11/16/3/2/binom.tex}
-\item From a lot of 30 bulbs which include 6 defectives, a sample of 4 bulbs is drawn
-at random with replacement. Find the probability distribution of the number of
-defective bulbs.
- \item Suppose $X$ is a binomial distribution $B\left(6,\frac{1}{2}\right)$. Show that $X=3$ is the most likely outcome.
-(Hint : $P(X=3)$ is the maximum among all $P(x_i),x_i=0,1,2,3,4,5,6$)
-%\input{ncert/12/13/5/8/main.tex}
-\item A fair coin is tossed four times, and a person win Re $1$ for each head and lose Rs $1.5$ for each tail that turns up.\\
-From the sample space calculate how many different amounts of money you can have after four tosses and the probability of having each of these amounts.
-\\
-\solution
-%\input{ncert/11/16/3/7a/Q11.16.3.7.tex}
-\item It is known that 10 $\%$ of certain articles manufactured are defective. What is the probability that in a random sample space of 12 such articles,9 are defective? \\
-\solution
-%%\input{ncert/12/13/5/13/12.13.5.13/main.tex}
-%\input{ncert/12/13/5/13/main.tex}
-\item A coin is tossed two times. Find the probability of getting at most one head.
-\\
-\solution
-%\input{exemplar/10/13/3/24/ncertq2.tex}
-\item An experiment succeeds twice as often as it fails. Find the probability that in the next
-six trials, there will be atleast 4 successes.
-\solution
-%\input{ncert/12/13/6/9/main.tex}
-\item A die is thrown 5 times. Find the probability that an odd number will come up exactly three times.
-		\solution
-	%\input{exemplar/12/13/3/20/main.tex}
-\item A coin is tossed 3 times. List the possible outcomes. Find the probability of getting
-(i) all heads (ii) at least 2 heads \\
-\solution
-%\input{exemplar/10/13/3/25/main.tex}
-\item Ten coins are tossed. What is the probability of getting atleast 8 heads?
-\\
-%\input{exemplar/12/13/3/21/main.tex}
-\item A factory produces bulbs. The probability that any one bulb is defective is $\frac{1}{50}$ and they are packed in boxes of 10. From a single box, find the probability that
-\begin{enumerate}
-\item none of the bulb is defective 
-\item exactly two bulbs are defective 
-\item more than 8 bulbs are working properly
-\end{enumerate}
-\solution
-%\input{exemplar/12/13/3/31/main.tex}
-\item A lot of 100 watches is known to have 10 defective watches. If 8 watches are
-selected (one by one with replacement) at random, what is the probability that
-there will be at least one defective watch?
-\\ %\input{exemplar/12/13/3/23/main.tex}
 \item The Probability of a man hitting  target is 0.25.He shoots 7 times. What is the probability of his hitting atleast twice?\\
 %\input{exemplar/12/13/3/22/exem.tex}
 \item Explain why the experiment of tossing a coin three times is said to have binomial distribution
@@ -584,10 +405,6 @@ two children, what is the conditional probability that both are girls given that
 \end{enumerate}
 \solution
 % \input{ncert/12/13/1/12/binom.tex}
-\item In an examination, 20 questions of true-false type are asked. Suppose a student tosses a fair coin to determine his answer to each question. If the coin falls heads, he answer true; if it falls tails, he answer false. Find the probability that he answers at least 12 questions correctly.\\
-\\
-\solution
-% \input{ncert/12/13/5/7/main.tex}
 \item The probability of getting a bad egg in a lot of 400 is 0.035. The number of bad eggs in the lot is\\
 \solution
 %\input{exemplar/10/13/1/22/main.tex}
